# streamly-frames

./: .travis.yml  CHANGELOG.md  LICENSE  README.md  stack.yaml  streamly-frames.cabal  streamly-vinyl.cabal
.github/workflows/: ci.yml
app/: Main.hs
src/: StreamlyVinyl.hs
src/Streamly/: Frames.hs  Vinyl.hs
src/Streamly/Vinyl/: Interpolate.hs  LagLead.hs  PathSignature.hs
test/: Doctest.hs  Spec.hs
