cabal-version:       2.4
name:                streamly-frames
version:             0.1.0.0
synopsis:            utilities for dealing with vinyl records within streamly streams
description:         utilities for dealing with vinyl records within streamly streams
homepage:            https://github.com/befunctional.io/streamly-frames
bug-reports:         https://github.com/befunctional.io/streamly-frames/issues
license:             MIT
license-file:        LICENSE
author:              o1lo01ol1o
maintainer:          o1lo01ol1o <repos@befunctional.io>
copyright:           2020 o1lo01ol1o
category:            Data
build-type:          Simple
extra-doc-files:     README.md
                     CHANGELOG.md
tested-with:         GHC == 8.6.5

source-repository head
  type:                git
  location:            https://github.com/befunctional.io/streamly-frames.git

common common-options
  build-depends:       base >= 4.11.0.0 && < 4.14
  
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-uni-patterns
                       -Wincomplete-record-updates
                       -fdicts-strict
                       -fspec-constr-recursive=16
                       -fmax-worker-args=16
  if impl(ghc >= 8.0)
    ghc-options:       -Wredundant-constraints
  if impl(ghc >= 8.2)
    ghc-options:       -fhide-source-paths
  if impl(ghc >= 8.4)
    ghc-options:       -Wmissing-export-lists
                       -Wpartial-fields
  if impl(ghc >= 8.8)
    ghc-options:       -Wmissing-deriving-strategies

  default-language:    Haskell2010

library
  import:              common-options
  hs-source-dirs:      src
  exposed-modules:     Streamly.Vinyl
                      , Streamly.Frames
                      , Streamly.Vinyl.Interpolate
                      , Streamly.Vinyl.LagLead
                      , Streamly.Vinyl.PathSignature
  build-depends:      exceptions
                      , Frames >= 0.6.1
                      , lens 
                      , monad-control
                      , monoidal-containers
                      , serialise
                      , streamly >= 0.7.1 
                      , strict-base-types
                      , strict-tuple
                      , text
                      , vector
                      , vinyl

test-suite streamly-frames-test
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       streamly-frames
                      , tasty
                      , tasty-quickcheck
                      , tasty-hunit
                      , QuickCheck
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

test-suite streamly-frames-doctest
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Doctest.hs
  build-depends:       streamly-frames
                      , doctest
  ghc-options:         -threaded
                       -rtsopts
                       -with-rtsopts=-N

benchmark streamly-frames-benchmark
  import:              common-options
  type:                exitcode-stdio-1.0
  hs-source-dirs:      benchmark
  main-is:             Main.hs
  build-depends:       gauge
                     , streamly-frames
  ghc-options:         -threaded
                       -rtsopts
                       -O2
                       -with-rtsopts=-N
